<?xml version="1.0"?>
<package format="2">
  <name>force_control</name>
  <version>0.0.0</version>
  <description>The force_control package</description>

  <maintainer email="zhjtu@buaa.edu.cn">Zhangjie Tu</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>catkin_simple</buildtool_depend> -->

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_conversions</depend>
  <depend>kdl_parser</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
